# gravitymap

./: .gitignore  README.md  pyproject.toml
docs/: data-and-sources.md  math-model.md  physics-overview.md
gravitymap/: __init__.py  __main__.py  app.py  catalog.py  cli.py  constants.py  models.py  physics.py  render.py  solar_system.py  ui.py
tests/: test_physics.py
